--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/engraya/postcraft-ai"
   },
   "keywords": [
     "nextjs",
@@ -34,7 +34,8 @@
     "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.4"
+    "react-hook-form": "^7.51.4",
+    "svix": "^1.37.0"
   },
   "devDependencies": {
     "@types/node": "^20",
