--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@neondatabase/serverless": "^0.10.1",
+    "@stripe/stripe-js": "^4.9.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.2",
+    "mailtrap": "^3.4.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "stripe": "^17.2.1",
     "svix": "^1.37.0"
   },
   "devDependencies": {
