--- a/package.json
+++ b/package.json
@@ -24,12 +24,19 @@
   "license": "ISC",
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
+    "@google/generative-ai": "^0.21.0",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@neondatabase/serverless": "^0.10.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@stripe/stripe-js": "^4.9.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.2",
+    "lucide-react": "^0.453.0",
     "mailtrap": "^3.4.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
@@ -37,8 +44,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-markdown": "^9.0.1",
     "stripe": "^17.2.1",
-    "svix": "^1.37.0"
+    "svix": "^1.37.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
